# Sub-sistema-de-manuten-o

./: .env  Base_de_dados.sql  README.md  aeronave.json  database.py  docker-compose.yml  models.py  pyproject.toml  settings.py  test.py
migrations/models/: 0_20240117103655_init.py
