[tool.poetry]
name = "fastapi-gcp"
version = "0.1.0"
description = ""
authors = ["Hélio Xavier <helio.xavierleal@gmail.com> ; Ângelo Vaz <francesvaz09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
asyncpg = "^0.29.0"
pydantic = {extras = ["dotenv"], version = "^2.5.3"}
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"



[tool.aerich]
tortoise_orm = "database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
